--- a/srinfo.css
+++ b/srinfo.css
@@ -53,6 +53,9 @@ body .page .info button:hover{
     color: #2b446a;
     border: 2px #2b446a solid;
 }
+body .page .info .bm{
+    display: none;
+}
 body .model_container{
     opacity: 0;
     position: fixed;
@@ -155,8 +158,8 @@ body .model_container14 .model14 i:hover{
 
 body .page .listt{
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 10px;
+    right: 15px;
     color: #ffffff;
     display: none;
     z-index: 100;
@@ -226,5 +229,11 @@ header ul li a{
     #menu{
         overflow: hidden;
         transition: 0.5s;
+    }
+    body .page .info .bm{
+        display: block !important;
+    }
+    body .page .info .bpc{
+        display: none;
     }
 }
