--- a/srinfo.css
+++ b/srinfo.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body p{
+    margin-bottom: 3px;
+}
 body .page{
     width: 100%;
     height: 100vh;
@@ -126,6 +129,7 @@ body .model_containerh .modelh i:hover{
 }
 
 body .model_container14{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -143,11 +147,15 @@ body .model_container14.show{
     pointer-events: auto;
 }
 body .model_container14 .model14{
+    width: 50%;
     background-color: #ffffff;
-    width: auto;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
+}
+body .model_container14 .model14 .c141{
+    display: flex;
+    flex-direction: row;
 }
 body .model_container14 .model14 i{
     transition: transform .3s;
@@ -200,7 +208,7 @@ header ul li a{
     text-decoration: none;
     
 }
-@media only screen and (max-width:700px){
+@media only screen and (max-width:910px){
     body .page .list{
         display: none;
     }
@@ -231,12 +239,25 @@ header ul li a{
         transition: 0.5s;
     }
     body .page .info .bm{
-        display: block !important;
+        display: none;
     }
+    /*
     body .page .info .bpc{
         display: none;
     }
+    */
     body .page .info .fontt h1{
         margin-top: 10px;
+    }
+    body .model_container14 .model14{
+        width: 80%;
+        position: absolute;
+        top: 50px;
+    }
+    body .model_container14 .model14 .c141{
+        flex-direction: column-reverse;
+    }
+    body .model_container14 .model14 .c141 img{
+        margin-top: 15px;
     }
 }
