--- a/mskinfo.css
+++ b/mskinfo.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body p{
+    margin-bottom: 3px;
+}
 body .page{
     width: 100%;
     height: 100vh;
@@ -108,11 +111,15 @@ body .model_containerh.show{
     pointer-events: auto;
 }
 body .model_containerh .modelh{
+    width: 50%;
     background-color: #ffffff;
-    width: auto;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
+}
+body .model_containerh .modelh .ch{
+    display: flex;
+    flex-direction: row;
 }
 body .model_containerh .modelh i{
     transition: transform .3s;
@@ -140,10 +147,14 @@ body .model_container14.show{
 }
 body .model_container14 .model14{
     background-color: #ffffff;
-    width: auto;
+    width: 50%;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
+}
+body .model_container14 .model14 .c141{
+    display: flex;
+    flex-direction: row;
 }
 body .model_container14 .model14 i{
     transition: transform .3s;
@@ -205,7 +216,7 @@ body .page .listt{
     display: none;
     z-index: 100;
 }
-@media only screen and (max-width:700px){
+@media only screen and (max-width:910px){
     body .page .list{
         display: none;
     }
@@ -236,12 +247,41 @@ body .page .listt{
         transition: 0.5s;
     }
     body .page .info .bm{
-        display: block !important;
+        display: none;
     }
+    /*
     body .page .info .bpc{
         display: none;
     }
+    */
     body .page .info .fontt h1{
         margin-top: 10px;
+    }
+    body .model_container14 .model14{
+        width: 80%;
+        position: absolute;
+        top: 50px;
+    }
+    body .model_container14 .model14 .c141{
+        flex-direction: column-reverse;
+    }
+    body .model_container14 .model14 .c141 img{
+        margin-top: 15px;
+        width: auto;
+    }
+    body .model_containerh .modelh{
+        width: 80%;
+        position: absolute;
+        top: 50px;
+    }
+    body .model_containerh .modelh .ch{
+        flex-direction: column-reverse;
+    }
+    body .model_containerh .modelh .ch img{
+        margin-top: 15px;
+        width: auto;
+    }
+    body .model_container .model img{
+        filter: grayscale(0%);
     }
 }
