--- a/mskinfo.css
+++ b/mskinfo.css
@@ -94,6 +94,7 @@ body .model_container .model img:hover{
 }
 
 body .model_containerh{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -129,6 +130,7 @@ body .model_containerh .modelh i:hover{
 }
 
 body .model_container14{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
