--- a/info.css
+++ b/info.css
@@ -66,6 +66,7 @@ body .model_container{
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    z-index: 101;
 }
 body .model_container.show{
     opacity: 1;
@@ -93,6 +94,7 @@ body .model_container .model img:hover{
 }
 
 body .model_containerh{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -104,17 +106,23 @@ body .model_containerh{
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    z-index: 101;
 }
 body .model_containerh.show{
     opacity: 1;
     pointer-events: auto;
+    z-index: 101;
 }
 body .model_containerh .modelh{
+    width: 50%;
     background-color: #ffffff;
-    width: auto;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
+}
+body .model_containerh .modelh .ch{
+    display: flex;
+    flex-direction: row;
 }
 body .model_containerh .modelh i{
     transition: transform .3s;
@@ -124,6 +132,7 @@ body .model_containerh .modelh i:hover{
 }
 
 body .model_container14{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -135,17 +144,23 @@ body .model_container14{
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    z-index: 101;
 }
 body .model_container14.show{
     opacity: 1;
     pointer-events: auto;
+    z-index: 101;
 }
 body .model_container14 .model14{
     background-color: #ffffff;
-    width: auto;
+    width: 50%;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
+}
+body .model_container14 .model14 .c141{
+    display: flex;
+    flex-direction: row;
 }
 body .model_container14 .model14 i{
     transition: transform .3s;
@@ -238,12 +253,39 @@ body .page .listt{
         transition: 0.5s;
     }
     body .page .info .bm{
-        display: block !important;
+        display: none;
     }
     body .page .info .bpc{
-        display: none;
+        display: block !important;
     }
     body .page .info .fontt h1{
         margin-top: 10px;
+    }
+    body .model_container14 .model14{
+        width: 100%;
+        position: absolute;
+        top: 0px;
+    }
+    body .model_container14 .model14 .c141{
+        flex-direction: column-reverse;
+    }
+    body .model_container14 .model14 .c141 img{
+        margin-top: 15px;
+        width: auto;
+    }
+    body .model_containerh .modelh{
+        width: 100%;
+        position: absolute;
+        top: 0px;
+    }
+    body .model_containerh .modelh .ch{
+        flex-direction: column-reverse;
+    }
+    body .model_containerh .modelh .ch img{
+        margin-top: 15px;
+        width: auto;
+    }
+    body .model_container .model img{
+        filter: grayscale(0%);
     }
 }
