--- a/niainfo.css
+++ b/niainfo.css
@@ -91,6 +91,7 @@ body .model_container .model img:hover{
 }
 
 body .model_containerh{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -102,17 +103,22 @@ body .model_containerh{
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    z-index: 101;
 }
 body .model_containerh.show{
     opacity: 1;
     pointer-events: auto;
 }
 body .model_containerh .modelh{
+    width: 50%;
     background-color: #ffffff;
-    width: auto;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
+}
+body .model_containerh .modelh .ch{
+    display: flex;
+    flex-direction: row;
 }
 body .model_containerh .modelh i{
     transition: transform .3s;
@@ -122,6 +128,7 @@ body .model_containerh .modelh i:hover{
 }
 
 body .model_container14{
+    overflow: scroll;
     opacity: 0;
     position: fixed;
     top: 0;
@@ -133,18 +140,24 @@ body .model_container14{
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    z-index: 101;
 }
 body .model_container14.show{
     opacity: 1;
     pointer-events: auto;
 }
 body .model_container14 .model14{
+    width: 50%;
     background-color: #ffffff;
-    width: auto;
     padding: 30px;
     border-radius: 5px;
     text-align: center;
 }
+body .model_container14 .model14 .c141{
+    display: flex;
+    flex-direction: row;
+}
+
 body .model_container14 .model14 i{
     transition: transform .3s;
 }
@@ -236,12 +249,41 @@ body .page .listt{
         transition: 0.5s;
     }
     body .page .info .bm{
-        display: block !important;
+        display: none;
     }
+    /*
     body .page .info .bpc{
         display: none;
     }
+    */
     body .page .info .fontt h1{
         margin-top: 10px;
+    }
+    body .model_container14 .model14{
+        width: 100%;
+        position: absolute;
+        top: 0px;
+    }
+    body .model_container14 .model14 .c141{
+        flex-direction: column-reverse;
+    }
+    body .model_container14 .model14 .c141 img{
+        margin-top: 15px;
+        width: auto;
+    }
+    body .model_containerh .modelh{
+        width: 100%;
+        position: absolute;
+        top: 0px;
+    }
+    body .model_containerh .modelh .ch{
+        flex-direction: column-reverse;
+    }
+    body .model_containerh .modelh .ch img{
+        margin-top: 15px;
+        width: auto;
+    }
+    body .model_container .model img{
+        filter: grayscale(0%);
     }
 }
