--- a/info.css
+++ b/info.css
@@ -5,7 +5,7 @@
 }
 body .page{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 35px);
     display: flex;
     align-items: center;
     justify-content: center;
