--- a/css/info.css
+++ b/css/info.css
@@ -170,7 +170,7 @@ footer{
     background-color: rgba(92, 92, 92, 0.5);
     margin: auto;
     z-index: 10000;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 }
