--- a/css/info.css
+++ b/css/info.css
@@ -21,10 +21,22 @@
     width: 100vw;
     height: 100vh;
     position: absolute;
+    background-color: #f3f3f3;
+    overflow: hidden;
+    
     background-image: url(../image/TPS-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.5;
+    backdrop-filter: blur(1);
+}
+.page .bg::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.081);
+    filter: blur(0.5);
 }
 .page .listt{
     height: 50px;
@@ -55,7 +67,17 @@
     align-items: center;
     flex-direction: row;
 }
-
+.page .btns{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.page .btns i{
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 25px;
+}
 .page .info .font{
     width: 40%;
     display: flex;
@@ -64,12 +86,13 @@
 }
 .page .info .font h1{
     -webkit-text-stroke: 1px #fff;
-    color: #fcd9ce; 
+    background-color: #fcd9ce; 
+    padding: 2px 5px;
     margin-bottom: 10px; 
     font-size: 60px;
 }
 .page .info .font h3{
-    
+    color:#333;
     font-weight: normal;
 }
 .page .info .block{
@@ -270,6 +293,7 @@ footer{
     justify-content:end;
     padding: 15px;
     border: #d9d2e9 10px dashed;
+    overflow: hidden;
 }
 @media only screen and (max-width:1300px){
     #con_h .con_in{
