--- a/css/NIA2.css
+++ b/css/NIA2.css
@@ -41,8 +41,8 @@ body{
 #preload .b.b1{
     width: 150px;
     height: 150px;
-    border-left: #2b446a 10px solid;
-    border-right: #2b446a 10px solid;
+    border-left: #6f121f 10px solid;
+    border-right: #6f121f 10px solid;
     animation: clock 2s linear infinite;
 }
 #preload .b.b2{
@@ -82,7 +82,7 @@ body{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background-image: url(../image/101238427_p28_master1200.png);
+    background-image: url(../image/101012084_p25_master1200.png);
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -140,8 +140,8 @@ body{
     width: 14%;
     height: 100%;
     margin: 0 10px;
-    background: linear-gradient(#2b446a,rgba(255,255,255,0));
-    border: 5px solid #2b446a;
+    background: linear-gradient(#6f121f,rgba(255,255,255,0));
+    border: 5px solid #6f121f;
     cursor: pointer;
     transition: 0.5s;
     filter: grayscale(0.8);
@@ -177,7 +177,7 @@ body{
     width: 70px;
     height: 70px;
     border-radius: 100%;
-    border: 4px solid #2b446a;
+    border: 4px solid #6f121f;
     right: 5%;
     display: flex;
     align-items: center;
@@ -203,23 +203,23 @@ body{
     width: 60%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;   
+    justify-content: flex-end;  
 }
 #unit_close i{
     width: 50px;
     height: 50px;
     border-radius: 100%;
     font-size: 25px;
-    border: #2b446a 2px solid;
+    border: #6f121f 2px solid;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #2b446a;
+    color: #6f121f;
     background-color: rgba(255,255,255,0.5);
-    cursor: pointer; 
+    cursor: pointer;  
 }
 #unit .con{
-    border: 5px dashed #2b446a;
+    border: 5px dashed #6f121f;
     width: 60%;
     height: 30%;
     background-color: #f3f3f3;
