--- a/css/TPS2.css
+++ b/css/TPS2.css
@@ -16,6 +16,58 @@ body{
     width: 100vw;
     height: 100vh;
 }
+#preload{
+    position: absolute;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#preload .loading{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#preload .b{
+    position: absolute;
+    border-radius: 50%;
+    border: 10px solid transparent;
+}
+#preload .b.b1{
+    width: 150px;
+    height: 150px;
+    border-left: #f5d4ca 10px solid;
+    border-right: #f5d4ca 10px solid;
+    animation: clock 2s linear infinite;
+}
+#preload .b.b2{
+    width: 100px;
+    height: 100px;
+    border-top: #f3f3f3 10px solid;
+    border-bottom: #f3f3f3 10px solid;
+    animation: clock2 2s linear infinite;
+}
+@keyframes clock{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+@keyframes clock2{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(-360deg);
+    }
+}
 .contain{
     width: 100%;
     height: 100%;
@@ -151,8 +203,7 @@ body{
     width: 60%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    cursor: pointer;    
+    justify-content: flex-end;  
 }
 #unit_close i{
     width: 50px;
@@ -165,6 +216,8 @@ body{
     justify-content: center;
     color: #f5d4ca;
     background-color: rgba(255,255,255,0.5);
+    
+    cursor: pointer;  
 }
 #unit .con{
     border: 5px dashed #f5d4ca;
