--- a/css/MSK2.css
+++ b/css/MSK2.css
@@ -124,8 +124,10 @@ body{
 
 .contain .page_c .logo a:hover img{
     filter: brightness(1);
+    /*
     margin-top: 10px;
     margin-bottom: 10px;
+    */
     margin-left: 20px;
 }
 .contain .page_c .members{
