--- a/css/NIA2.css
+++ b/css/NIA2.css
@@ -17,7 +17,7 @@ body{
     height: 100vh;
 }
 #preload{
-    position: absolute;
+    position: fixed;
     z-index: 1000;
     width: 100%;
     height: 100%;
