--- a/css/MSK2.css
+++ b/css/MSK2.css
@@ -276,6 +276,19 @@ body{
     color: #f3f3f3;
     font-size: 6vw;
 }
+.contain .page_m footer{
+    width: 100%;
+    background-color: #f3f3f3;
+    padding: 5px 30px;
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    text-align: right;
+}
+.contain .page_m footer a{
+    text-decoration: none;
+    color: inherit;
+}
 #unit{
     position: absolute;
     width: 100%;
